--- a/bytebank/package.json
+++ b/bytebank/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "express": "^4.18.1",
+    "json": "^11.0.0",
+    "json-server": "^0.17.0",
     "rxjs": "~7.5.0",
+    "server": "^0.0.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
