--- a/bytebank/tsconfig.json
+++ b/bytebank/tsconfig.json
@@ -19,6 +19,8 @@
     "importHelpers": true,
     "target": "es2020",
     "module": "es2020",
+    "allowSyntheticDefaultImports": true,
+
     "lib": [
       "es2020",
       "dom"
@@ -28,6 +30,6 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
   }
 }
